--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-            - name: MongoDB in GitHub Actions
+- name: MongoDB in GitHub Actions
   # You may pin to the exact commit or the version.
   # uses: supercharge/mongodb-github-action@b0a1493307c4e9b82ed61f3858d606c5ff190c64
   uses: supercharge/mongodb-github-action@v1.10.0
@@ -6,12 +6,12 @@
     # MongoDB version to use (default "latest")
     mongodb-version: # optional, default is latest
     # MongoDB replica set name (no replica set by default)
-    mongodb-replica-set: # optional, default is 
+    mongodb-replica-set: # optional, default is ""
     # MongoDB port to use (default 27017)
     mongodb-port: # optional, default is 27017
     # MongoDB db to create (default: none)
-    mongodb-db: # optional, default is 
+    mongodb-db: # optional, default is ""
     # MongoDB root username (default: none)
-    mongodb-username: # optional, default is 
+    mongodb-username: # optional, default is ""
     # MongoDB root password (default: none)
-    mongodb-password: # optional, default is 
+    mongodb-password: # optional, default is ""
