--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,35 @@
-- name: MongoDB in GitHub Actions
-  # You may pin to the exact commit or the version.
-  # uses: supercharge/mongodb-github-action@b0a1493307c4e9b82ed61f3858d606c5ff190c64
-  uses: supercharge/mongodb-github-action@v1.10.0
-  with:
-    # MongoDB version to use (default "latest")
-    mongodb-version: # optional, default is latest
-    # MongoDB replica set name (no replica set by default)
-    mongodb-replica-set: # optional, default is ""
-    # MongoDB port to use (default 27017)
-    mongodb-port: # optional, default is 27017
-    # MongoDB db to create (default: none)
-    mongodb-db: # optional, default is ""
-    # MongoDB root username (default: none)
-    mongodb-username: # optional, default is ""
-    # MongoDB root password (default: none)
-    mongodb-password: # optional, default is ""
+name: CI
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+
+      - name: MongoDB in GitHub Actions
+        # You may pin to the exact commit or the version.
+        # uses: supercharge/mongodb-github-action@b0a1493307c4e9b82ed61f3858d606c5ff190c64
+        uses: supercharge/mongodb-github-action@v1.10.0
+        with:
+          # MongoDB version to use (default "latest")
+          mongodb-version: 'latest'  # Provide a valid version or keep as 'latest'
+          # MongoDB replica set name (no replica set by default)
+          mongodb-replica-set: '' # Leave as empty string if not needed
+          # MongoDB port to use (default 27017)
+          mongodb-port: 27017  # Provide a valid port number
+          # MongoDB db to create (default: none)
+          mongodb-db: 'mydatabase'  # Provide a valid database name or leave as empty string
+          # MongoDB root username (default: none)
+          mongodb-username: ''  # Provide a valid username or leave as empty string
+          # MongoDB root password (default: none)
+          mongodb-password: ''  # Provide a valid password or leave as empty string
