--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,30 @@
-name: Deploy to Server
+name: Deploy to Docker Hub
 
 on:
   push:
     branches:
-      - main
+      - main  # or specify another branch
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Build Docker image
-      run: docker build -t your-dockerhub-username/your-node-app:latest .
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-    - name: Push Docker image to Docker Hub
-      run: |
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker push your-dockerhub-username/your-node-app:latest
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Deploy to your server
-      run: ssh user@yourserver "docker pull your-dockerhub-username/your-node-app:latest && docker run -d -p 80:3000 your-dockerhub-username/your-node-app:latest"
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: chessclubtntech/chessclubtntech:latest
