--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "othercode",
   "version": "1.0.0",
-  "description": "",
+  "description": "e498ee956ef71ba1530cd99f1eb4a6e7",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
