--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,20 @@
-name: Deploy to Docker Hub
-#Test 3
+name: Deploy and Test
+
 on:
   push:
     branches:
       - main  # or specify another branch
 
 jobs:
-  build-and-deploy:
+  build-deploy-test:
     runs-on: ubuntu-latest
+
+    services:
+      mongodb:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        options: --health-cmd "curl --silent --fail http://localhost:27017/ || exit 1" --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - name: Checkout repository
@@ -28,3 +35,19 @@ jobs:
         context: .
         push: true
         tags: chessclubtntech/chessclubtntech:latest
+
+    - name: Run Docker container
+      run: |
+        docker run -d -p 80:3000 --name my-app chessclubtntech/chessclubtntech:latest
+
+    - name: Wait for the app to start
+      run: sleep 20
+
+    - name: Test the application
+      run: |
+        curl --fail http://localhost:80 || exit 1
+
+    - name: Stop and remove Docker container
+      run: |
+        docker stop my-app
+        docker rm my-app
