--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         image: mongo:latest
         ports:
           - 27017:27017
-        options: --health-cmd "curl --silent --fail http://localhost:27017/ || exit 1" --health-interval 20s --health-timeout 10s --health-retries 5
+        options: --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })' || exit 1" --health-interval 20s --health-timeout 10s --health-retries 5
 
     steps:
     - name: Checkout repository
