--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,17 @@ jobs:
           mongodb-username: ''        # Optional, if needed
           mongodb-password: ''        # Optional, if needed
 
-      - name: Install MongoDB CLI tools
+      - name: Add MongoDB APT repository
         run: |
           sudo apt-get update
-          sudo apt-get install -y mongodb-clients
+          sudo apt-get install -y gnupg
+          wget -qO - https://www.mongodb.org/static/pgp/server-6.0.asc | sudo apt-key add -
+          echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu $(lsb_release -cs) mongodb-org/6.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-6.0.list
+          sudo apt-get update
+
+      - name: Install MongoDB CLI tools
+        run: |
+          sudo apt-get install -y mongodb-org-shell
 
       - name: Verify MongoDB is running
         run: |
