--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,17 +26,11 @@ jobs:
           mongodb-username: ''        # Optional, if needed
           mongodb-password: ''        # Optional, if needed
 
-      - name: Add MongoDB APT repository
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gnupg
-          wget -qO - https://www.mongodb.org/static/pgp/server-6.0.asc | sudo apt-key add -
-          echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu $(lsb_release -cs) mongodb-org/6.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-6.0.list
-          sudo apt-get update
-
       - name: Install MongoDB CLI tools
         run: |
-          sudo apt-get install -y mongodb-org-shell
+          wget https://fastdl.mongodb.org/tools/db/mongodb-database-tools-ubuntu2004-x86_64-100.6.0.deb
+          sudo dpkg -i mongodb-database-tools-ubuntu2004-x86_64-100.6.0.deb
+          sudo apt-get install -f  # Install dependencies
 
       - name: Verify MongoDB is running
         run: |
