--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.5.4",
+    "path": "^0.12.7"
   }
 }
