--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "othercode",
   "version": "1.0.0",
   "description": "e498ee956ef71ba1530cd99f1eb4a6e7",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
