--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
-  "name": "othercode",
+  "name": "your-project-name",
   "version": "1.0.0",
-  "description": "e498ee956ef71ba1530cd99f1eb4a6e7",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
