--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name",
+  "name": "chessclubtntech.github.io",
   "version": "1.0.0",
   "keywords": [],
   "author": "",
