--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "chessclubtntech.github.io",
   "version": "1.0.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
