--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chessclubtntech.github.io",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests specified\" && exit 0",
     "start": "node server.js"
   },
   "keywords": [],
