--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'No build step defined'"
   },
   "keywords": [],
   "author": "",
