--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
   functions = "netlify/functions"
   publish = "public"
+
+[functions]
+  timeout = 30  # Increase the timeout to 30 seconds
