--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,28 +14,23 @@ jobs:
         image: mongo:latest
         ports:
           - 27017:27017
-        options: --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })' || exit 1" --health-interval 20s --health-timeout 10s --health-retries 5
+        options: >-
+          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })' || exit 1"
+          --health-interval 20s
+          --health-timeout 10s
+          --health-retries 5
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v2
       with:
-        node-version: '14' # Adjust to your Node.js version
+        node-version: '18'
 
     - name: Install dependencies
-      run: npm install
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      run: npm ci
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
@@ -56,13 +51,13 @@ jobs:
       run: |
         sleep 20
 
+    - name: Test WebSocket connection
+      run: |
+        curl -X GET http://localhost:3000/socket.io/?EIO=3&transport=polling || exit 1
+
     - name: Test the application
       run: |
         curl --fail http://localhost:3000 || exit 1
-
-    - name: Test WebSocket connection
-      run: |
-        node websocket-test.js || exit 1
 
     - name: Stop and remove Docker container
       run: |
