--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,30 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Build and push Docker image
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: false
+        tags: chessclubtntech/chessclubtntech:latest
+
+    - name: Push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
         push: true
         tags: chessclubtntech/chessclubtntech:latest
+
+    - name: Debug Docker Info
+      run: |
+        docker info
+        docker images
 
     - name: Run Docker container
       run: |
