--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Build the application
+      run: npm run build
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -28,14 +31,14 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v4
       with:
         context: .
         push: false
         tags: chessclubtntech/chessclubtntech:latest
 
     - name: Push Docker image
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v4
       with:
         context: .
         push: true
@@ -49,13 +52,13 @@ jobs:
     - name: Wait for the app to start
       run: |
         echo "Waiting for the app to start..."
-        for i in {1..30}; do
+        for i in {1..40}; do
           if curl --silent --fail http://localhost:3000 > /dev/null; then
             echo "App is up"
             exit 0
           fi
-          echo "App is not up yet, retrying in 10 seconds..."
-          sleep 10
+          echo "App is not up yet, retrying in 15 seconds..."
+          sleep 15
         done
         echo "App did not start within the expected time"
         exit 1
